# nondestructive

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs
src/yaml/: data.rs  document.rs  error.rs  mod.rs  parsing.rs  raw.rs  string.rs  value.rs  value_mut.rs
src/yaml/mapping/: mapping_mut.rs
src/yaml/sequence/: sequence_mut.rs
src/yaml/serde/: error.rs
src/yaml/tests/: actions.rs  actions.yaml  mapping.rs  mod.rs  multiline.rs  sequence.rs
tests/: make-nested-indent.rs
