[package]
name = "nondestructive"
version = "0.0.27"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.81"
description = "Nondestructive editing over various file formats."
documentation = "https://docs.rs/nondestructive"
readme = "README.md"
homepage = "https://github.com/udoprog/nondestructive"
repository = "https://github.com/udoprog/nondestructive"
license = "MIT OR Apache-2.0"
keywords = ["yaml"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["std", "yaml"]
yaml = []
serde = ["dep:serde", "bstr/serde"]
serde-edits = ["std", "dep:serde", "bstr/serde", "serde?/derive", "slab/serde"]
std = ["alloc", "bstr/std"]
alloc = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg, nondestructive_write_to_eq)'] }

[dependencies]
bstr = { version = "1.4.0", default-features = false }
itoa = "1.0.6"
lexical-core = { version = "1.0.0", default-features = false, features = ["parse-floats", "parse-integers"] }
memchr = "2.5.0"
ryu = "1.0.13"
serde = { version = "1.0.160", optional = true }
slab = "0.4.8"
twox-hash = { version = "1.6.3", default-features = false }

[dev-dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
